@@ -2350,11 +2350,12 @@ Joshua Gatcomb,
 Julien Beasley,
 Abe Timmerman,
 Peter Stevens,
+Pete Krawczyk,
 and the late great Iain Truskett.
 
 =head1 COPYRIGHT
 
-Copyright (c) 2005 Andy Lester. All rights reserved. This program is
+Copyright (c) 2006 Andy Lester. All rights reserved. This program is
 free software; you can redistribute it and/or modify it under the same
 terms as Perl itself.
 
